--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,6 @@ $r_mimob: 320px;
 $r_mob_360: 360px;
 $r_mob_400: 400px;
 $r_mob_500: 500px;
-$r_mob_600: 600px;
 $r_tab: 768px;
 $r_tab_900: 900px;
 $r_desk: 1000px;
@@ -24,6 +23,9 @@ $r_desk_full_1750: 1750px;
 
 html {
     font-size: 10px;
+    @media (max-width:$r_mob_500) {
+        font-size: 8px;
+    }
 }
 
 body {
@@ -127,6 +129,10 @@ body {
             border: 1px solid $green;
             opacity: 0.8;
         }
+        @media (max-width:$r_mob_500) {
+            width: 4.5rem;
+            height: 4.5rem;
+        }
 
         &:hover {
             background-color: $green;
@@ -172,6 +178,10 @@ body {
             opacity: 0.8;
             transition: 0.3s;
         }
+        @media (max-width:$r_mob_500) {
+            width: 4.5rem;
+            height: 4.5rem;
+        }
 
         &:hover {
             opacity: 1;
@@ -194,6 +204,10 @@ body {
             opacity: 0.8;
             transition: 0.3s;
         }
+        @media (max-width:$r_mob_500) {
+            width: 4.5rem;
+            height: 4.5rem;
+        }
 
         &:hover {
             opacity: 1;
@@ -205,6 +219,9 @@ body {
             display: flex;
             align-items: center;
             gap: 1.5rem;
+        }
+        @media (max-width:$r_mob_500) {
+            gap: 1.4rem;
         }
     }
 }
@@ -655,7 +672,7 @@ body {
     padding-bottom: 13.1rem;
     @media (max-width: $r_tab) {
         padding-top: 0;
-        padding-bottom: 6rem;
+        padding-bottom: 4rem;
     }
 
     &__text {
@@ -1098,8 +1115,11 @@ body {
 }
 
 .catalog {
-    padding-top: 59px;
-    padding-bottom: 135px;
+    padding-top: 5.9rem;
+    padding-bottom: 13.5rem;
+    @media (max-width: $r_tab) {
+        padding-bottom: 8rem;
+    }
 
     &__list {
         margin-top: 8.5rem;
@@ -1196,6 +1216,9 @@ body {
     @media (max-width: $r_desk) {
         grid-template-columns: repeat(2, 1fr);
     }
+    @media (max-width: $r_tab) {
+        gap: 10px;
+    }
     
     &__item {
         border: 1px solid rgba($green, 0.4);
@@ -1217,6 +1240,9 @@ body {
         width: 100%;
         height: 204px;
         text-align: center;
+        @media (max-width: $r_tab) {
+            height: 150px;
+        }
     }
 
     &__image {
@@ -1240,6 +1266,9 @@ body {
         }
         @media (max-width: $r_tab_900) {
             text-align: center;
+        }
+        @media (max-width: $r_tab) {
+            font-size: 2rem;
         }
     }
 
@@ -1286,8 +1315,11 @@ body {
 }
 
 .delivery {
-    padding-top: 4px;
-    padding-bottom: 137px;
+    padding-top: 0.4rem;
+    padding-bottom: 13.7rem;
+    @media (max-width: $r_tab) {
+        padding-bottom: 10rem;
+    }
 
     &-box {
         display: flex;
@@ -1407,7 +1439,10 @@ body {
 }
 
 .contact {
-    padding-bottom: 161px;
+    padding-bottom: 16.1rem;
+    @media (max-width: $r_tab) {
+        padding-bottom: 8rem;
+    }
     
     &-box {
         display: flex;
@@ -1440,7 +1475,7 @@ body {
             @media (max-width: $r_tab) {
                 max-width: 100%;
                 margin-left: 0;
-                margin-top: 5rem;
+                margin-top: 4rem;
             }
         }
 
