--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -523,11 +523,10 @@ body {
         @media (max-width: $r_desk_full_1750) {
             width: 9.8rem;
             top: 120px;
-            right: -50px;
+            right: -8%;
         }
         @media (max-width: $r_mob_500) {
             top: 88px;
-            right: -38px;
         }
     }
 
@@ -604,6 +603,9 @@ body {
     @media (max-width: $r_tab) {
         text-align: center;
     }
+    @media (max-width: $r_mob_360) {
+        font-size: 3.75rem;
+    }
 
     &__span {
         font-style: italic;
@@ -632,12 +634,28 @@ body {
         @media (max-width: $r_desk_1280) {
             font-size: 1.6rem;
         }
+        @media (max-width: $r_mob_500) {
+            max-width: 350px;
+            margin: 0 auto;
+        }
+        @media (max-width: $r_mob_360) {
+            font-size: 1.5rem;
+            max-width: 250px;
+        }
     }
 
     &_size-m {
         font-size: 2.4rem;
         @media (max-width: $r_desk_1280) {
             font-size: 2.2rem;
+        }
+        @media (max-width: $r_mob_500) {
+            font-size: 1.9rem;
+            max-width: 350px;
+            margin: 0 auto;
+        }
+        @media (max-width: $r_mob_360) {
+            font-size: 1.5rem;
         }
     }
 }
@@ -668,9 +686,12 @@ body {
         padding: 2rem 3.4rem;
         box-shadow: 0px 1rem 1.1rem 0.17rem rgba(207, 92, 13, 0.15);
         @media (max-width: $r_desk_full_1750) {
-            padding: 2rem 3.4rem;
+            padding: 1.6rem 3.4rem;
         }
         @media (max-width: $r_desk_1350) {
+            margin: 0 auto;
+        }
+        @media (max-width: $r_mob_500) {
             margin: 0 auto;
         }
     }
@@ -728,6 +749,10 @@ body {
         position: relative;
         z-index: 0;
         transition: 0.3s;
+        @media (max-width: $r_mob_500) {
+            text-align: center;
+            padding: 3rem 2rem 2.2rem;
+        }
         
         &_white {
             height: 520px;
@@ -740,7 +765,7 @@ body {
                 height: 400px;
             }
             @media (max-width: $r_mob_500) {
-                height: 249px;
+                height: 240px;
                 text-align: center;
                 padding: 2.2rem 1.7rem;
             }
@@ -766,6 +791,9 @@ body {
                     top: 2px;
                     left: 2px;
                     z-index: -1;
+                    @media (max-width: $r_mob_500) {
+                        display: none;
+                    }
                 }
             }
         }
@@ -776,14 +804,24 @@ body {
 
         &_milk {
             background-image: url(../images/milk.png);
+            @media (max-width: $r_mob_500) {
+                background-image: url(../images/milk-mob.png);
+            }
         }
 
         &_pasta {
             background-image: url(../images/pasta.png);
+            @media (max-width: $r_mob_500) {
+                background-image: url(../images/pasta-mob.png);
+            }
         }
-
+        
         &_steaks {
             background-image: url(../images/steaks.png);
+            @media (max-width: $r_mob_500) {
+                background-image: url(../images/steaks-mob.png);
+                background-position: top;
+            }
         }
 
         &__title {
@@ -796,6 +834,8 @@ body {
             }
             @media (max-width: $r_desk_1120) {
                 font-size: 2.15rem;
+                text-align: center;
+                margin: 0 auto;
             }
             @media (max-width: $r_mob_500) {
                 font-size: 1.75rem;
@@ -820,6 +860,9 @@ body {
                 margin: 0 auto;
                 margin-top: 2rem;
             }
+            @media (max-width: $r_mob_500) {
+                min-height: 45px;
+            }
         }
 
         &__price {
@@ -830,6 +873,11 @@ body {
             }
             @media (max-width: $r_tab_900) {
                 text-align: center;
+            }
+            @media (max-width: $r_mob_500) {
+                font-size: 1.75rem;
+                margin-bottom: 2rem;
+                margin-top: 10px;
             }
         }
 
@@ -898,6 +946,9 @@ body {
             text-align: center;
             @media (max-width: $r_desk_hd) {
                 height: 200px;
+            }
+            @media (max-width: $r_mob_500) {
+                height: 110px;
             }
         }
 
@@ -1155,8 +1206,11 @@ body {
 }
 
 .trends {
-    padding-top: 30px;
-    padding-bottom: 135px;
+    padding-top: 3rem;
+    padding-bottom: 13.5rem;
+    @media (max-width: $r_mob_500) {
+        padding-bottom: 1rem;
+    }
 
     &__text {
         margin-top: 3.89rem;
@@ -1217,6 +1271,9 @@ body {
         gap: 1rem;
         justify-content: center;
     }
+    @media (max-width: $r_mob_500) {
+        display: none;
+    }
 
     &__item {
         flex-basis: 230px;
@@ -1247,11 +1304,44 @@ body {
             font-size: 1.5rem;
         }
         
-
         &:hover {
             border: 1px solid $orange;
             color: $orange;
             transition: 0.3s;
+        }
+    }
+}
+
+.category-swiper {
+    display: none;
+    @media (max-width: $r_mob_500) {
+        display: block;
+        text-align: center;
+    }
+
+    &__link {
+        padding: 2.4rem 0;
+        border: 1px solid rgba($green, 0.5);
+        color: rgba($green, 0.5);
+        font-size: 1.8rem;
+        text-decoration: none;
+        border-radius: 4rem;
+        display: block;
+        transition: 0.3s;
+        @media (max-width: $r_mob_500) {
+            flex-basis: 140px;
+            font-size: 1.65rem;
+        }
+        @media (max-width: $r_mob_360) {
+            padding: 1.4rem 0;
+            font-size: 1.25rem;
+            flex-basis: 110px;
+        }
+
+        &:hover {
+            border: 1px solid $orange;
+            color: $orange;
+            box-shadow: none
         }
     }
 }
@@ -1278,6 +1368,9 @@ body {
         @media (max-width: $r_desk_full_1750) {
             padding: 2rem 2rem; 
         }
+        @media (max-width: $r_mob_500) {
+            padding: 1.5rem 2rem; 
+        }
 
         &:hover {
             box-shadow: 0 0 0 2px rgba($green, 0.4) inset;
@@ -1292,6 +1385,15 @@ body {
         text-align: center;
         @media (max-width: $r_tab) {
             height: 150px;
+        }
+        @media (max-width: $r_mob_500) {
+            height: 120px;
+        }
+        @media (max-width: $r_mob_400) {
+            height: 80px;
+        }
+        @media (max-width: $r_mob_360) {
+            height: 80px;
         }
     }
 
@@ -1320,6 +1422,10 @@ body {
         @media (max-width: $r_tab) {
             font-size: 2rem;
         }
+        @media (max-width: $r_mob_500) {
+            font-size: 1.75rem;
+            margin-top: 0;
+        }
     }
 
     &__description {
@@ -1338,9 +1444,10 @@ body {
             margin: 0 auto;
             margin-top: 1rem;
         }
-        /*@media (max-width: $r_tab) {
-            min-width: 240px;
-        }*/
+        @media (max-width: $r_mob_500) {
+            font-size: 1.25rem;
+            min-height: 50px;
+        }
     }
 
     &__price {
@@ -1353,6 +1460,10 @@ body {
         @media (max-width: $r_tab_900) {
             margin-bottom: 2rem;
             text-align: center;
+        }
+        @media (max-width: $r_mob_500) {
+            font-size: 1.5rem;
+            margin-bottom: 1.5rem;
         }
     }
 
@@ -1548,12 +1659,22 @@ body {
             flex-direction: column;
             justify-content: space-between;
             gap: 2rem;
+            font-size: 2.4rem;
             padding-left: 0;
             margin-top: 5.8rem;
             list-style: none;
             @media (max-width: $r_tab) {
                 flex-direction: row;
                 margin-top: 3rem;
+            }
+            @media (max-width: $r_mob_360) {
+                margin-top: 2rem;
+                font-size: 1.5rem;
+            }
+            @media (max-width: 330px) {
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
             }
         }
 
@@ -1569,6 +1690,10 @@ body {
             @media (max-width: $r_tab) {
                 font-size: 1.6rem;
                 gap: 1rem;
+            }
+            @media (max-width: $r_mob_360) {
+                font-size: 1.5rem;
+                gap: 0.5rem;
             }
 
             &::before {
@@ -1589,12 +1714,19 @@ body {
             &::before {
                 background-image: url(../images/phone.svg);
                 background-size: 29px 30px;
+                @media (max-width: $r_mob_500) {
+                    background-size: 20px 20px;
+                }
             }
+            
         }
         
         &__mail {
             &::before {
                 background-image: url(../images/mail.svg);
+                @media (max-width: $r_mob_500) {
+                    background-size: 20px 20px;
+                }
             }
         }
     }
@@ -1624,6 +1756,9 @@ body {
         margin-bottom: 1rem;
         display: block;
         margin-left: 0.6rem;
+        @media (max-width: $r_tab) {
+            text-align-last: left; 
+        }
     }
 
     &__input {
@@ -1668,6 +1803,9 @@ body {
             margin-top: 1.2rem;
             margin: 0 auto;
         }
+        @media (max-width: $r_mob_500) {
+            padding: 1.8rem 2.3rem;
+        }
 
     }
 
@@ -1697,6 +1835,7 @@ footer {
         justify-content: space-between;
         margin-top: 79px;
         margin-bottom: 21px;
+        font-size: 1.8rem;
         @media (max-width: $r_desk_1280) {
             gap: 9%;
         }
@@ -1754,7 +1893,6 @@ footer {
     
     &__link {
         color: $green;
-        font-size: 18px;
         text-decoration: none;
         transition: 0.3s;
 
@@ -1783,6 +1921,7 @@ footer {
             font-size: 3rem;
             margin-bottom: 1rem;
             margin-top: 1rem;
+            font-size: 3rem;
         }
 
         &:hover {
@@ -1791,7 +1930,6 @@ footer {
     }
 
     &__email {
-        font-size: 18px;
         color: $green;
         margin-bottom: 13px;
         text-decoration: none;
