--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,17 @@ html {
     }
 }
 
+.wrapper {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    // Для слайдеров
+    > * {
+        min-width: 0;
+    }
+}
+
 body {
     font-size: 1.6rem;
     font-family: $font-jost;
@@ -287,7 +298,7 @@ body {
         @media (max-width: $r_tab) {
             max-width: 100%;
             margin-left: 0;
-            margin-top: 3rem;
+            margin-top: 2.4rem;
         }
     }
 
@@ -307,8 +318,11 @@ body {
         align-items: center;
         gap: 30px;
         @media (max-width: $r_desk_1120) {
-            padding-top: 3rem;
+            padding-top: 4.4rem;
             padding-bottom: 9rem;
+        }
+        @media (max-width:$r_mob_500) {
+            padding-bottom: 6rem;
         }
     }
 
@@ -509,8 +523,8 @@ body {
         }
         @media (max-width: $r_desk_1120) {
             width: 8rem;
-            top: 100px;
-            left: -15px;
+            top: 81px;
+            left: -18px;
         }
     }
 
@@ -523,7 +537,7 @@ body {
         @media (max-width: $r_desk_full_1750) {
             width: 9.8rem;
             top: 120px;
-            right: -8%;
+            right: -11%;
         }
         @media (max-width: $r_mob_500) {
             top: 88px;
@@ -550,7 +564,8 @@ body {
             top: 630px;
         }
         @media (max-width: $r_mob_500) {
-            top: 480px;
+            top: 464px;
+            width: 6.5rem;
         }
     }
 
@@ -568,6 +583,10 @@ body {
             width: 5rem;
             top: 350px;
             left: 0;
+        }
+        @media (max-width: $r_mob_500) {
+            width: 3.5rem;
+            top: 250px;
         }
     }
     
@@ -640,7 +659,7 @@ body {
         }
         @media (max-width: $r_mob_360) {
             font-size: 1.5rem;
-            max-width: 250px;
+            max-width: 260px;
         }
     }
 
@@ -676,6 +695,9 @@ body {
     @media (max-width: $r_desk_1280) {
         font-size: 1.4rem;
     }
+    @media (max-width: $r_mob_500) {
+        padding: 2rem 3.3rem;
+    }
 
     &:hover {
         background-color: $dark-orange;
@@ -704,6 +726,9 @@ body {
         @media (max-width: $r_desk_1350) {
             margin: 0 auto;
         }
+        @media (max-width: $r_mob_500) {
+            padding: 2rem 4rem;
+        }
     }
 }
 
@@ -718,6 +743,9 @@ body {
     &__text {
         margin-top: 6rem;
         max-width: 700px;
+        @media (max-width: $r_mob_500) {
+            margin-top: 4rem;
+        }
     }
 }
 
@@ -948,7 +976,7 @@ body {
                 height: 200px;
             }
             @media (max-width: $r_mob_500) {
-                height: 110px;
+                height: 93px;
             }
         }
 
@@ -1015,6 +1043,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    @media (max-width: $r_mob_500) {
+        bottom: -40px;
+    }
 }
 
 .swiper-pagination-bullet-active {
@@ -1104,9 +1135,13 @@ body {
 
 .about {
     padding-top: 37px;
-    padding-bottom: 154px;
+    padding-bottom: 15,4rem;
     @media (max-width: $r_tab) {
         padding-bottom: 6rem;
+    }
+    @media (max-width: $r_mob_500) {
+        padding-top: 5px;
+        padding-bottom: 3.7rem;
     }
 
     &__box {
@@ -1121,6 +1156,10 @@ body {
             flex-direction: column;
             gap: 4rem;
             margin-top: 4rem;
+        }
+        @media (max-width: $r_mob_500) {
+            margin-top: 3.8rem;
+            gap: 5rem;
         }
     }
 
@@ -1160,6 +1199,9 @@ body {
         @media (max-width: $r_tab) {
             gap: 4rem;
         }
+        @media (max-width: $r_mob_500) {
+            gap: 4rem;
+        }
     }
 
     &__item {
@@ -1177,12 +1219,20 @@ body {
             border: 1px solid rgba($green, 0.4);
             border-radius: 100%;
             margin-bottom: 1.5rem;
+            @media (max-width: $r_mob_500) {
+                width: 60px;
+                height: 60px;
+                margin-bottom: 1rem;
+            }
         }
         
         &:nth-child(1) {
             &::before {
                 background-image: url(../images/about-icon-1.svg);
                 background-size: 44px 41px;
+                @media (max-width: $r_mob_500) {
+                    background-size: 30px 30px;
+                }
             }
         }
 
@@ -1190,6 +1240,9 @@ body {
             &::before {
                 background-image: url(../images/about-icon-2.svg);
                 background-size: 40px 40px;
+                @media (max-width: $r_mob_500) {
+                    background-size: 27px 27px;
+                }
             }
         }
 
@@ -1197,6 +1250,9 @@ body {
             &::before {
                 background-image: url(../images/about-icon-3.svg);
                 background-size: 45px 39px;
+                @media (max-width: $r_mob_500) {
+                    background-size: 35px 30px;
+                }
             }
         }
     }
@@ -1215,6 +1271,9 @@ body {
     &__text {
         margin-top: 3.89rem;
         letter-spacing: 1px;
+        @media (max-width: $r_mob_500) {
+            margin-top: 2.6rem;
+        }
     }
 }
 
@@ -1223,6 +1282,12 @@ body {
     padding-bottom: 13.5rem;
     @media (max-width: $r_tab) {
         padding-bottom: 8rem;
+    }
+    @media (max-width: $r_tab) {
+        padding-top: 4rem;
+    }
+    @media (max-width: $r_mob_500) {
+        padding-bottom: 6.5rem;
     }
 
     &__list {
@@ -1243,6 +1308,11 @@ body {
         letter-spacing: 1px;
         opacity: 0.8;
         transition: 0.3s;
+        @media (max-width: $r_mob_500) {
+            font-size: 1.25rem;
+            margin-top: 5rem;
+            gap: 1rem;
+        }
 
         &::before {
             content: '';
@@ -1252,6 +1322,10 @@ body {
             height: 25px;
             background-size: cover;
             background-repeat: no-repeat;
+            @media (max-width: $r_mob_500) {
+                width: 20px;
+                height: 20px;
+            }
         }
 
         &:hover {
@@ -1317,6 +1391,8 @@ body {
     @media (max-width: $r_mob_500) {
         display: block;
         text-align: center;
+        margin-top: 5.3rem;
+        margin-bottom: 2.5rem;
     }
 
     &__link {
@@ -1369,7 +1445,7 @@ body {
             padding: 2rem 2rem; 
         }
         @media (max-width: $r_mob_500) {
-            padding: 1.5rem 2rem; 
+            padding: 1.5rem 1.5rem; 
         }
 
         &:hover {
@@ -1393,7 +1469,7 @@ body {
             height: 80px;
         }
         @media (max-width: $r_mob_360) {
-            height: 80px;
+            height: 75px;
         }
     }
 
@@ -1425,6 +1501,11 @@ body {
         @media (max-width: $r_mob_500) {
             font-size: 1.75rem;
             margin-top: 0;
+            display: -webkit-box;
+            overflow: hidden;
+            -webkit-line-clamp: 1;
+            text-overflow: ellipsis;
+            -webkit-box-orient: vertical;
         }
     }
 
@@ -1481,6 +1562,9 @@ body {
     @media (max-width: $r_tab) {
         padding-bottom: 10rem;
     }
+    @media (max-width: $r_mob_500) {
+        padding-bottom: 6rem;
+    }
 
     &-box {
         display: flex;
@@ -1501,6 +1585,9 @@ body {
             margin: 4rem auto 0;
             flex-direction: column;
             max-width: 500px;
+        }
+        @media (max-width: $r_mob_500) {
+            margin-top: 1.5rem;
         }
 
         &__text {
@@ -1579,16 +1666,25 @@ body {
         &__mc {
             background-image: url(../images/pay/mc.png);
             max-width: 53px;
+            @media (max-width: $r_mob_500) {
+                max-width: 43px;
+            }
         }
 
         &__visa{
             background-image: url(../images/pay/visa.png);
             max-width: 74px;
+            @media (max-width: $r_mob_500) {
+                max-width: 54px;
+            }
         }
 
         &__pp{
             background-image: url(../images/pay/pp.png);
             max-width: 87px;
+            @media (max-width: $r_mob_500) {
+                max-width: 63px;
+            }
         }
 
         &:hover {
@@ -1604,6 +1700,9 @@ body {
     @media (max-width: $r_tab) {
         padding-bottom: 8rem;
     }
+    @media (max-width: $r_mob_500) {
+        padding-bottom: 3rem;
+    }
     
     &-box {
         display: flex;
@@ -1618,6 +1717,9 @@ body {
             text-align: center;
             max-width: 400px;
             margin: 0 auto;
+        }
+        @media (max-width: $r_mob_500) {
+            gap: 5.5rem;
         }
 
         &__text {
@@ -1637,6 +1739,10 @@ body {
                 max-width: 100%;
                 margin-left: 0;
                 margin-top: 4rem;
+            }
+            @media (max-width: $r_mob_500) {
+                margin-top: 3.5rem;
+                line-height: 145%;
             }
         }
 
