--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,6 +33,7 @@ html {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     // Для слайдеров
     > * {
         min-width: 0;
@@ -285,6 +286,7 @@ body {
 .main {
     padding-bottom: 187px;
     z-index: 0;
+    position: relative;
     @media (max-width: $r_tab) {
         padding-bottom: 1rem;
     }
@@ -543,7 +545,7 @@ body {
         @media (max-width: $r_desk_full_1750) {
             width: 9.8rem;
             top: 120px;
-            right: -11%;
+            right: -13%;
         }
         @media (max-width: $r_mob_500) {
             top: 88px;
@@ -562,7 +564,7 @@ body {
         }
         @media (max-width: $r_desk_1120) {
             top: 700px;
-            right: -15px;
+            right: -13px;
             left: inherit;
             transform: rotate(90deg)
         }
